@@ -4,7 +4,8 @@ Change log for zeit.web
 2.59 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Only consider usable max-height for responsive images,
+       fixes printkiosk teaser images
 
 
 2.58 (2016-02-23)
